# org-orgzly

./: .README.md.~undo-tree~  .gitignore  .org-orgzly-test.el.~undo-tree~  .org-orgzly.el.~undo-tree~  README.md  README.org  classes.uml  config.ini  configspec.ini  down.plantuml  flow.puml  flow.uml  main.py  org-orgzly-capture.el  org-orgzly-test.el  org-orgzly.el  org-orgzly.ini  org-orgzly.norg  org-orgzly.py  process.plantuml  pyproject.toml  sequence.uml  setup.py  up.plantuml
